--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-oauth/google": "^0.8.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
