--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,8 @@
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
+    "mysql2-promise": "^0.1.4",
     "nodemon": "^2.0.20"
   }
 }
